--- a/web/index.html
+++ b/web/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
+  
+  <meta name="google-signin-client_id" content="568017992729-o1vlajsj5s4jssmonb4ic9sdcgf9rdvq.apps.googleusercontent.com">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="welvaart">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
 
   <title>welvaart</title>
   <link rel="manifest" href="manifest.json">
@@ -21,6 +22,7 @@
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-analytics.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>
 
